--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <ul class="sci">
             <li><a href="#"><img src="facebook.png" alt=""></a></li>
             <li><a href="#"><img src="twitter.png" alt=""></a></li>
-            <li><a href="#"><img src="instagram.png" alt=""></a></li>
+            <li><a href="https://www.instagram.com/jay_mourya1/"><img src="instagram.png" alt=""></a></li>
         </ul>
     </section>
     <script type="text/javascript">
