--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
         </div>
         <ul class="sci">
-            <li><a href="#"><img src="facebook.png" alt=""></a></li>
+            <li><a href="https://www.facebook.com/ajay.mourya.9279"><img src="facebook.png" alt=""></a></li>
             <li><a href="#"><img src="twitter.png" alt=""></a></li>
             <li><a href="https://www.instagram.com/jay_mourya1/"><img src="instagram.png" alt=""></a></li>
         </ul>
