--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="#" class="logo">asthetic Fitness</a>
             <div class="togglemenu" onclick="togglemenu();"></div>
             <ul class="navigation">
-                <li><a href="#">Home</a></li>
+                <li><a href="https://uditraj11.github.io/astheticfitnessfactroy/">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Trainer</a></li>
                 <li><a href="#">Blog</a></li>
